--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
+coroutinesGuava = "1.7.3"
 camera = "1.3.0"
+guava = "32.1.2-android"
 accompanistCoil = "0.28.0"
 accompanistNavigationAnimation = "0.34.0"
 agp = "8.7.2"
@@ -33,6 +35,8 @@ composeMarkdown = "0.3.3"
 
 
 [libraries]
+kotlinx-coroutines-guava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava", version.ref = "coroutinesGuava" }
+guava = { group = "com.google.guava", name = "guava", version.ref = "guava" }
 camera2 = { module = "androidx.camera:camera-camera2", version.ref = "camera" }
 cameraLifecycle = { module = "androidx.camera:camera-lifecycle", version.ref = "camera" }
 cameraView = { module = "androidx.camera:camera-view", version.ref = "camera" }
